--- a/build-server/package.json
+++ b/build-server/package.json
@@ -1,5 +1,6 @@
 {
   "name": "build-server",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "script.js",
@@ -10,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.511.0",
+    "axios": "^1.7.2",
     "ioredis": "^5.3.2",
     "mime-types": "^2.1.35"
   }
