--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,4 +4,4 @@ steps:
   dir: /workspace
 
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['compute', 'scp', '--recurse', '/workspace/vercel-clone/*', 'rd-df-pipelines:/root/cicd_test']
+  args: ['compute', 'scp', '--recurse', '/workspace/vercel-clone/*', 'rd-df-pipelines:/root/cicd_test', '--zone=us-central1-c']
