--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,7 +5,10 @@ steps:
 
 - name: 'gcr.io/cloud-builders/gcloud'
   args:
-      - "gcloud compute ssh rd-df-pipelines --zone=us-central1-c"
+      - 'compute'
+      - 'ssh'
+      - 'rd-df-pipelines'
+      - '--zone=us-central1-c'
 
 - name: 'gcr.io/cloud-builders/gcloud'
   args: ['compute', 'scp', '--recurse', '/workspace/vercel-clone/*', 'rd-df-pipelines:/root/cicd_test', '--zone=us-central1-c']
