--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,12 +4,13 @@ steps:
   dir: /workspace
 
 - name: 'gcr.io/cloud-builders/gcloud'
+  entrypoint: 'bash'
   args:
-      - 'compute'
-      - 'ssh'
-      - 'rd-df-pipelines'
-      - '--zone=us-central1-c'
-      - '--project=reviewdale-datafabric'
+      - '-c'
+      - |
+        echo $SSH_KEY > /root/.ssh/id_rsa
+        chmod 600 /root/.ssh/id_rsa
+        gcloud compute ssh rd-df-pipelines --zone=us-central1-c --project=reviewdale-datafabric --ssh-key-file=/root/.ssh/id_rsa
 
 - name: 'gcr.io/cloud-builders/gcloud'
   args: ['compute', 'scp', '--recurse', '/workspace/vercel-clone/*', 'rd-df-pipelines:/root/cicd_test', '--zone=us-central1-c']
