--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,10 +5,10 @@ steps:
     args:
     - '-c'
     - |
-      mkdir -p ~/root/.ssh && \\
-      gcloud secrets versions access latest --secret=cloud-build-ssh-key > ~/root/.ssh/id_rsa && \\
-      chmod 600 ~/root/.ssh/id_rsa && \\
-      gcloud secrets versions access latest --secret=cloud-build-ssh-key-pub > ~/root/.ssh/id_rsa.pub && \\
-      chmod 600 ~/root/.ssh/id_rsa.pub && \\
-      set -x && \\
+      mkdir -p ~/root/.ssh
+      gcloud secrets versions access latest --secret=cloud-build-ssh-key > ~/root/.ssh/id_rsa
+      chmod 600 ~/root/.ssh/id_rsa
+      gcloud secrets versions access latest --secret=cloud-build-ssh-key-pub > ~/root/.ssh/id_rsa.pub
+      chmod 600 ~/root/.ssh/id_rsa.pub
+      set -x
       gcloud compute ssh rd-df-pipelines --ssh-key-file=~/root/.ssh/id_rsa --zone=us-central1-c
