--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,11 +24,8 @@ steps:
       # Output the content of id_rsa.pub
       cat ~/.ssh/id_rsa.pub
 
-      # Output the content of id_rsa (for debugging purposes, make sure this is secure)
-      # cat ~/.ssh/id_rsa
-
-      # Set known hosts file (workaround for permission denied)
+      # Set known hosts file
       touch ~/.ssh/google_compute_known_hosts
 
-      # Connect to the instance using the SSH key
-      gcloud compute ssh rd-df-pipelines --ssh-key-file=~/.ssh/id_rsa --zone=us-central1-c --tunnel-through-iap
+      # Connect to the instance using the SSH key with troubleshooting
+      gcloud compute ssh rd-df-pipelines --ssh-key-file=~/.ssh/id_rsa --zone=us-central1-c --tunnel-through-iap --troubleshoot
