--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,12 +6,15 @@ steps:
     - '-c'
     - |
       mkdir -p /builder/home/.ssh
-      touch /builder/home/.ssh/google_compute_known_hosts
-      chmod 700 /builder/home/.ssh
-      chmod 600 /builder/home/.ssh/google_compute_known_hosts
       gcloud secrets versions access latest --secret=cloud-build-ssh-key > /builder/home/.ssh/id_rsa
       chmod 600 /builder/home/.ssh/id_rsa
       gcloud secrets versions access latest --secret=cloud-build-ssh-key-pub > /builder/home/.ssh/id_rsa.pub
       chmod 600 /builder/home/.ssh/id_rsa.pub
+      
+      # Fetch instance metadata and ensure the public key is added
+      gcloud compute instances add-metadata rd-df-pipelines \
+        --zone=us-central1-c \
+        --metadata-from-file ssh-keys=/builder/home/.ssh/id_rsa.pub
+      
       set -x
-      gcloud compute ssh rd-df-pipelines --ssh-key-file=/builder/home/.ssh/id_rsa --zone=us-central1-c --strict-host-key-checking=no
+      gcloud compute ssh rd-df-pipelines --ssh-key-file=/builder/home/.ssh/id_rsa --zone=us-central1-c
