--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,19 @@
 steps:
+# Clone the GitHub repository with hardcoded token
 - name: 'gcr.io/cloud-builders/git'
-  args: ['clone', 'https://AmitPotdukhe07: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@github.com/AmitPotdukhe07/rd-df-Information-Pipelines.git']
-  dir: /workspace
+  entrypoint: 'bash'
+  args:
+    - '-c'
+    - |
+      git clone https://AmitPotdukhe07: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@github.com/AmitPotdukhe07/rd-df-Information-Pipelines.git /workspace/rd-df-Information-Pipelines
 
+# Copy the code to the VM using gcloud scp
 - name: 'gcr.io/cloud-builders/gcloud'
-  args: ['compute', 'scp', '--recurse', '/workspace/rd-df-Information-Pipelines/*', 'rd-df-pipelines:/root/cicd_test']
+  args:
+    - 'compute'
+    - 'scp'
+    - '--recurse'
+    - '/workspace/rd-df-Information-Pipelines/*'
+    - 'root@rd-df-pipelines:/root/cicd_test'
+
+timeout: '1800s'
