--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -41,9 +41,9 @@ steps:
     - 'scp'
     - '--recurse'
     - '/workspace/rd-df-Information-Pipelines'
-    - 'amitpotdukhe@rd-vm-df-pipelines:/root/cicd_test'
+    - 'amitpotdukhe@rd-vm-df-pipelines:/home/amitpotdukhe/cicd_test'
     - '--zone'
-    - 'asia-south1-c'  # Replace with your VM's zone
+    - 'asia-south1-c'
 
 # Manually perform SSH using the private key to copy files
 - name: 'gcr.io/cloud-builders/gcloud'
