--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,12 +1,5 @@
 steps:
-# Clone the GitHub repository with hardcoded token
-- name: 'gcr.io/cloud-builders/git'
-  args:
-    - 'clone'
-    - 'https://AmitPotdukhe07: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@github.com/AmitPotdukhe07/vercel-clone.git'
-    - '/workspace/rd-df-Information-Pipelines'
-
-# List the contents of the workspace to verify the clone
+# List the contents of the workspace to verify the repository was cloned automatically by the trigger
 - name: 'gcr.io/cloud-builders/gcloud'
   entrypoint: 'bash'
   args:
@@ -15,14 +8,14 @@ steps:
       echo "Listing contents of /workspace:"
       ls -la /workspace
 
-# List the contents of the cloned repository
+# List the contents of the repository (already cloned automatically into /workspace)
 - name: 'gcr.io/cloud-builders/gcloud'
   entrypoint: 'bash'
   args:
     - '-c'
     - |
-      echo "Listing contents of /workspace/rd-df-Information-Pipelines:"
-      ls -la /workspace/rd-df-Information-Pipelines
+      echo "Listing contents of the repository in /workspace:"
+      ls -la /workspace/vercel-clone
 
 # Retrieve the private key from Secret Manager
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -41,13 +34,11 @@ steps:
   args:
     - '-c'
     - |
-      for file in /workspace/rd-df-Information-Pipelines/*; do
+      for file in /workspace/[YOUR-REPO-NAME]/*; do
         if [ -f "$file" ] || [ -d "$file" ]; then
           gcloud compute scp --recurse "$file" amitpotdukhe@rd-vm-df-pipelines:/home/amitpotdukhe/cicd_test --zone asia-south1-c
         fi
       done
-
-
 
 # Manually perform SSH using the private key to copy files
 - name: 'gcr.io/cloud-builders/gcloud'
@@ -56,6 +47,6 @@ steps:
     - '-c'
     - |
       echo "Copying files via SSH..."
-      scp -i /workspace/vm-key.pem -o StrictHostKeyChecking=no -r /workspace/rd-df-Information-Pipelines amitpotdukhe@rd-vm-df-pipelines:/root/cicd_test
+      scp -i /workspace/vm-key.pem -o StrictHostKeyChecking=no -r /workspace/[YOUR-REPO-NAME] amitpotdukhe@rd-vm-df-pipelines:/root/cicd_test
 
 timeout: '1800s'
